--- a/UserHomePage/MainPage.xaml
+++ b/UserHomePage/MainPage.xaml
@@ -5,48 +5,30 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UserHomePage"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="400" d:DesignWidth="700"
       Title="MainPage">
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="30"></RowDefinition>
+
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
-        <TextBlock Grid.ColumnSpan="2" Grid.Column="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center"
-                   Grid.Row ="1" FontWeight="Bold" Margin="0 0 15 0">Popular leagues:</TextBlock>
-
-        <ListBox Name="SearchList" Grid.ColumnSpan="3" Grid.RowSpan="8" Grid.Row="3" Margin="5" Grid.Column="3"  FontWeight="Bold"
-                 MouseDoubleClick="SearchList_OnMouseDoubleClick" MinHeight="200" MinWidth="150"></ListBox>
-
-        <ListBox Name="LeagueList" Grid.Row="3" Grid.Column="0" Margin="5" Grid.RowSpan="8" Grid.ColumnSpan="3" MinWidth="150"
-                 MinHeight="200" MouseDoubleClick="ManageLeague_Clicked" />
-
-        <TextBox Name="searchTextBox" Grid.RowSpan="2" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3"
-                 TextChanged="searchTextBox_TextChanged"/>
-        <TextBlock IsHitTestVisible="False" Grid.RowSpan="1" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1" Grid.Column="3" Text="Search for a player/team/league"  HorizontalAlignment="Left" Margin="5" Foreground="DarkGray">
+        <TextBlock Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left"
+                    FontWeight="Bold" Margin="5">Leagues</TextBlock>
+        
+        
+        <ListBox Grid.Row="1" Grid.Column="0" Name="LeagueList" Margin="5" MouseDoubleClick="ManageLeague_Clicked" Height="300"/>
+       
+        <TextBox Grid.Row="0" Grid.Column="1" Name="searchTextBox"  VerticalAlignment="Center"
+                 TextChanged="searchTextBox_TextChanged" BorderThickness="0.5"/>
+        <TextBlock Grid.Row="0" Grid.Column="1" Name="SearchForPlayer" IsHitTestVisible="False" VerticalAlignment="Center" Text="Search for a player/team/league"  HorizontalAlignment="Left" Margin="5">
             <TextBlock.Style>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Visibility" Value="Collapsed"/>
@@ -58,6 +40,16 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
+
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="5" >
+            
+        <ListBox Name="SearchList" Margin="5" FontWeight="Bold"
+                 MouseDoubleClick="SearchList_OnMouseDoubleClick"></ListBox>
+
+        
+
+        
+        </StackPanel>
     </Grid>
- 
+
 </Page>
