--- a/UserHomePage/PlayerStatsPage.xaml
+++ b/UserHomePage/PlayerStatsPage.xaml
@@ -35,7 +35,7 @@
         </Grid.ColumnDefinitions>
         <DataGrid HorizontalAlignment="Stretch" ColumnWidth="*" IsReadOnly="True" VerticalAlignment="Stretch"
                   Grid.ColumnSpan="6" Grid.RowSpan="13"
-                  Name="DataGrid"
+                  Name="PlayersDataGrid"
                     >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Path=Name.Name}" />
