--- a/UserHomePage/MatchProtocolPage.xaml
+++ b/UserHomePage/MatchProtocolPage.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:UserHomePage"
       xmlns:converters="clr-namespace:KnatteliganWPF.Converters;assembly=KnatteliganWPF"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="400" d:DesignWidth="700"
       Title="MatchProtocolPage">
 
     <Page.Resources>
@@ -16,79 +16,50 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock Name="HomeTeamName" Grid.Row="1" Grid.Column="0" TextAlignment="Right" Grid.ColumnSpan="3"
-                   Margin="10,26,46,12" Grid.RowSpan="2" FontWeight="Bold" FontSize="16"/>
 
-        <TextBlock Name="AwayTeamName" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3" Margin="46,26,10,9"
-                   Grid.RowSpan="2" FontWeight="Bold" FontSize="16"/>
-
-        <TextBlock Name="ShowDate" Width="110" Grid.Row="0" Grid.ColumnSpan="3" Grid.Column="2" Margin="33,5,26,0"   />
-
-        <Label Name="PlayerNameLabel" Grid.Column="2" HorizontalAlignment="Left" Margin="38,27,0,0" Grid.Row="3"
-               VerticalAlignment="Top" RenderTransformOrigin="0.351,-0.5" Grid.ColumnSpan="2" Grid.RowSpan="2"
-               FontWeight="Bold" />
-
-        <ItemsControl Name="HomeTeamMatchEvents" BorderThickness="0" HorizontalContentAlignment="Right" Grid.Row="2"
-                 Grid.Column="0" Grid.ColumnSpan="3" Margin="15,23,41,0" FontWeight="Bold" FontSize="9"
-                 Grid.RowSpan="2" >
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Padding="5,0,5,0"
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="0" Margin="10" HorizontalAlignment="Right" Grid.RowSpan="2">
+            <TextBlock Name="HomeTeamName" TextAlignment="Center" FontWeight="Bold" FontSize="16" Margin="5,20,5,5"/>
+            <ItemsControl Name="HomeTeamMatchEvents" BorderThickness="0" HorizontalContentAlignment="Right" FontWeight="Bold" FontSize="9" Margin="5,20,5,5">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Padding="5,0,5,0"
                                    Text="{Binding Converter= {StaticResource MatchEventToStringConverter}}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
 
-        <ItemsControl Grid.Row="2" Name="AwayTeamMatchEvents" BorderThickness="0" Grid.Column="4" Grid.ColumnSpan="3"
-                 Margin="41,23,15,0" Grid.RowSpan="2" FontWeight="Bold" FontSize="9"
-                 
-        >
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Padding="5,0,5,0"
+
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="2" Margin="10" HorizontalAlignment="Left" Grid.RowSpan="2">
+            <TextBlock Name="AwayTeamName"  FontWeight="Bold" FontSize="16" TextAlignment="Center" Margin="5,20,5,5"/>
+            <ItemsControl Name="AwayTeamMatchEvents" BorderThickness="0" Margin="5,20,5,5" FontWeight="Bold" FontSize="9" HorizontalAlignment="Left">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Padding="5,0,5,0"
                                    Text="{Binding Converter= {StaticResource MatchEventToStringConverter}}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
 
-
-        <TextBlock Name="HomeTeamGoals" Grid.Column="2" TextAlignment="Center" Margin="15,0,51,5" FontWeight="Bold" FontSize="40"
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0"/>
-
-        <TextBlock Name="AwayTeamGoals" Grid.Column="3" TextAlignment="Center" Margin="51,0,15,5" FontWeight="Bold" FontSize="40"
-                   Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Text="0"/>
-
-        <TextBlock Grid.Column="3" TextAlignment="Center" Margin="5,24,10,24" FontWeight="Bold" FontSize="10"
-                   Grid.RowSpan="3" RenderTransformOrigin="0.341,0.971">
-            <Run Text="-" FontSize="40" />
-        </TextBlock>
-
-        <TextBlock Name="MatchWeek" Grid.Column="6"  />
-
+        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1" Margin="5" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock Name="HomeTeamGoals" TextAlignment="Center" Margin="5" FontWeight="Bold" FontSize="40" Text="0"/>
+                <TextBlock TextAlignment="Center" Margin="5" FontWeight="Bold" FontSize="40" Text="-"></TextBlock>
+                <TextBlock Name="AwayTeamGoals" TextAlignment="Center" Margin="5" FontWeight="Bold" FontSize="40" Text="0"/>
+            </StackPanel>
+            <TextBlock Name="ShowDate" Margin="5" HorizontalAlignment="Center"/>
+            <TextBlock Name="LeagueName" Margin="5" HorizontalAlignment="Center"/>
+        </StackPanel>
     </Grid>
 </Page>
