--- a/UserHomePage/SerieSchedulePage.xaml
+++ b/UserHomePage/SerieSchedulePage.xaml
@@ -5,53 +5,43 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UserHomePage"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="400" d:DesignWidth="700"
       Title="SerieSchedulePage" Loaded="SerieSchedulePage_Loaded">
 
-    <Grid Margin="0,0,2,0">
+    <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-
+            <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
 
-            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <ListView
-            Grid.Row="0"
-            Grid.Column="0"
-            Grid.RowSpan="8"
-            Grid.ColumnSpan="2"
-               Name="GameWeeksList"
-            ItemsSource="{DynamicResource Drinks}"
-            SelectionChanged ="GameWeeksList_Click">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="GameWeek nr:" DisplayMemberBinding="{Binding Key}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <TextBlock Name="HeaderYo" Grid.Row="0" Margin="5" FontWeight="Bold" FontSize="16"></TextBlock>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="5">
+            <ListView Name="GameWeeksList" SelectionChanged ="GameWeeksList_Click">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Match Weeks" DisplayMemberBinding="{Binding Key}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
 
-        <ListBox
-            Grid.Row="0"
-            Grid.RowSpan="8"
-            Grid.Column="2"
-            Grid.ColumnSpan="3"
-            Name="CurrentMatchWeekMatches"
-            MouseDoubleClick="CurrentMatchWeekMatches_OnMouseDoubleClick" />
-        <Button Grid.ColumnSpan="2" Content="All matches" Grid.Column="1" HorizontalAlignment="Left" Margin="4,0,0,0" Grid.Row="8" VerticalAlignment="Top" Width="75" Click="AllMatches_Click"/>
+            <ListView Name="CurrentMatchWeekMatches" MouseDoubleClick="CurrentMatchWeekMatches_OnMouseDoubleClick">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Matches" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+
+        </StackPanel>
+        <Button Content="All matches" Height="20" Grid.Column="0" HorizontalAlignment="Left" Margin="5,0,10,0" Grid.Row="2"  Click="AllMatches_Click"/>
     </Grid>
 
 </Page>
+
+
+
