--- a/UserHomePage/TeamPage.xaml
+++ b/UserHomePage/TeamPage.xaml
@@ -10,19 +10,17 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="230"></RowDefinition>
-            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.RowSpan="2" Width="400" HorizontalAlignment="Left">
+        <StackPanel Grid.Row="0" Grid.RowSpan="2" Width="600" HorizontalAlignment="Left" Margin="5">
             <TextBlock Name="TeamNameTxt" Margin="5" FontSize="16" FontWeight="Bold"></TextBlock>
-            <ListBox Name="TeamMatchList" MouseDoubleClick="TeamMatchList_OnMouseDoubleClick" Width="400" Height="260" HorizontalAlignment="Left" Margin="5"/>
-
-           
-
+            <TextBlock Name="LgName" FontSize="12" Margin="5" FontWeight="Bold"></TextBlock>
+            <ListBox Name="TeamMatchList" MouseDoubleClick="TeamMatchList_OnMouseDoubleClick" Width="400" Height="240" HorizontalAlignment="Left" Margin="5"/>
         </StackPanel>
-        <Button Grid.Row="2" Click="Players_OnClick" Width="100" HorizontalAlignment="Left" Margin="5,0,10,0" VerticalAlignment="Bottom">Player stats</Button>
+        <Button Grid.Row="2" Click="Players_OnClick" Width="100" HorizontalAlignment="Left" Margin="5,0,20,0" VerticalAlignment="Center">Player stats</Button>
 
 
 
